# multimodal_emotion_demo

./: .env.example  .gitignore  Makefile  README.md  dvc.yaml  meld_only_local_plan.md  params.yaml  pyproject.toml  requirements-colab.txt  requirements.txt
_documents/: Deep Research Report for the User’s Project.docx  Final Report Template.docx  Proposal Template.docx
configs/data/: labels.yaml  manifests.yaml  splits.yaml  windowing.yaml
configs/eval/: ablations.yaml  metrics.yaml
configs/serve/: batch_infer.yaml  onnx.yaml
configs/train/: audio.yaml  fusion_late.yaml  fusion_stacking.yaml  text_asr.yaml  text_oracle.yaml  video.yaml
docs/: meld_local_usage.md
scripts/: colab_train.sh  create_manifest_subset.py  export_onnx_all.ps1  extract_video_features.py  prepare_meld_manifest.py  report_manifest_stats.py  run_ablations.ps1  run_cv_training.ps1  run_data_pipeline.ps1
src/asr/: asr_confidence.py  whisper_transcribe.py
src/audio/: dataset.py  infer.py  model_wav2vec2.py  train.py
src/cli/: batch_infer.py  evaluate.py  prepare_data.py  train_fusion.py  train_unimodal.py
src/common/: constants.py  io_utils.py  seed.py
src/data/: build_manifests.py  build_splits.py  label_mapping.py  windowing.py
src/eval/: metrics.py  run_ablation_suite.py  run_mosei_eval.py  whisper_hallucination_impact.py
src/fusion/: calibrate_temperature.py  dataset.py  model_late_mlp.py  train_late.py  train_stacking.py
src/serving/: export_onnx.py  onnx_infer.py  schema_validate.py
src/text/: dataset.py  infer.py  model_bert_context.py  train.py
src/video/: infer.py  (+5 more)
(+13 files in other folders)
