[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-emotion-recognition"
version = "0.1.0"
description = "Offline multimodal emotion recognition prototype"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
